# lazy-sockets

./: CMakeLists.txt  README.md
src/: common.cpp  defines.h  lazy_sockets.h  receivers.h  soc_unix.cpp  soc_win.cpp
test/: CMakeLists.txt  driver_socket_mock.cpp  test.cpp  test2.cpp  test_readme_client.cpp  test_readme_server.cpp  test_udp.cpp
